# FSMS-Hexaly

./: CMakeLists.txt  README.md
data/input/: arrivals20.txt  departures20.txt  passengers20.txt
data/output/: Asol.txt  Dsol.txt  Instance_S0.txt  visits.txt  walking.txt  xsol.txt  ysol.txt
src/: main.cpp
